--- a/internal/http/templates/layout.html
+++ b/internal/http/templates/layout.html
@@ -18,7 +18,7 @@
             </a>
             <div class="nav-links">
                 <a href="/" class="nav-link">Dashboard</a>
-                <a href="/projects/new" class="nav-link btn btn-primary">+ New Service</a>
+                <a href="/projects/new" class="btn btn-primary btn-sm">+ New Service</a>
             </div>
         </div>
     </nav>
