--- a/internal/http/templates/layout.html
+++ b/internal/http/templates/layout.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="/" class="logo">
-                <span class="logo-icon">⚙️</span>
+                <span class="logo-icon">{{template "icon-settings"}}</span>
                 <span class="logo-text">Servio</span>
             </a>
             <div class="nav-links">
