--- a/internal/http/templates/project_form.html
+++ b/internal/http/templates/project_form.html
@@ -9,7 +9,7 @@
 
     {{if .Error}}
     <div class="alert alert-error">
-        <span class="alert-icon">⚠️</span>
+        <span class="alert-icon">{{template "icon-alert"}}</span>
         {{.Error}}
     </div>
     {{end}}
